Infrastructure-CF/5-app-deploy.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: 'Deployment Tier: ASGs, ALB, Role and CodeDeploy'

Parameters:
  EnvironmentName:
    Type: String
  VpcId:
    Type: AWS::EC2::VPC::Id
  PublicSubnets:
    Type: List<AWS::EC2::Subnet::Id>
  PrivateAppSubnets:
    Type: List<AWS::EC2::Subnet::Id>
  InstanceType:
    Type: String
    Default: t3.micro
  GoldenAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Description: SSM Parameter path containing your Golden AMI ID (e.g., /my-app/golden-ami-id)
  PostgresSecurityGroupId:  
    Type: AWS::EC2::SecurityGroup::Id
  RedisSecurityGroupId:
    Type: AWS::EC2::SecurityGroup::Id


Resources:
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: { Service: ec2.amazonaws.com }
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore
        - arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforAWSCodeDeploy
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy
      Policies:
        - PolicyName: CustomKMSAccessPolicy
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Sid: Statement1
                Effect: Allow
                Action:
                  - kms:Encrypt
                  - kms:Decrypt
                  - kms:DescribeKey
                Resource: '*'

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles: [ !Ref EC2InstanceRole ]

  CodeDeployServiceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal: { Service: codedeploy.amazonaws.com }
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole
        - arn:aws:iam::aws:policy/AmazonS3FullAccess

  ALBSecurityGroup:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: Allow HTTP and HTTPS traffic
        VpcId: !Ref VpcId
        SecurityGroupIngress:
          - IpProtocol: tcp
            FromPort: 80
            ToPort: 80
            CidrIp: 0.0.0.0/0
            Description: Allow HTTP traffic
          - IpProtocol: tcp
            FromPort: 443
            ToPort: 443
            CidrIp: 0.0.0.0/0
            Description: Allow HTTPS traffic

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow traffic from ALB
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref ALBSecurityGroup

  CelerySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Celery Workers
      VpcId: !Ref VpcId

# ---------------------------------------------------------
# DATA TIER INGRESS RULES (Injected remotely)
# ---------------------------------------------------------
  PostgresIngressFromWeb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref PostgresSecurityGroupId
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref WebSecurityGroup
      Description: Allow Web tier to connect to Postgres

  PostgresIngressFromCelery:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref PostgresSecurityGroupId
      IpProtocol: tcp
      FromPort: 5432
      ToPort: 5432
      SourceSecurityGroupId: !Ref CelerySecurityGroup
      Description: Allow Celery tier to connect to Postgres

  RedisIngressFromWeb:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref RedisSecurityGroupId
      IpProtocol: tcp
      FromPort: 6379
      ToPort: 6379
      SourceSecurityGroupId: !Ref WebSecurityGroup
      Description: Allow Web tier to connect to Redis

  RedisIngressFromCelery:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref RedisSecurityGroupId
      IpProtocol: tcp
      FromPort: 6379
      ToPort: 6379
      SourceSecurityGroupId: !Ref CelerySecurityGroup
      Description: Allow Celery tier to connect to Redis

  WebALB:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub ${EnvironmentName}-WebALB
      Subnets: !Ref PublicSubnets
      SecurityGroups: [ !Ref ALBSecurityGroup ]
      Scheme: internet-facing

  WebTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub ${EnvironmentName}-WebTG
      VpcId: !Ref VpcId
      Port: 80
      Protocol: HTTP
      TargetType: instance

  WebListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref WebALB
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref WebTargetGroup

  WebLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !Ref GoldenAmiId
        InstanceType: !Ref InstanceType
        IamInstanceProfile:
          Name: !Ref EC2InstanceProfile
        SecurityGroupIds: [ !Ref WebSecurityGroup ]
        UserData: 
          Fn::Base64: |
            #!/bin/bash        
            echo "APP_ROLE=web" >> /etc/environment
            export APP_ROLE=web

  WebASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub ${EnvironmentName}-WebASG
      VPCZoneIdentifier: !Ref PrivateAppSubnets
      LaunchTemplate:
        LaunchTemplateId: !Ref WebLaunchTemplate
        Version: !GetAtt WebLaunchTemplate.LatestVersionNumber
      MinSize: '2'
      MaxSize: '2'
      DesiredCapacity: '2'
      TargetGroupARNs: [ !Ref WebTargetGroup ]
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-Web-Instance
          PropagateAtLaunch: true

  CeleryLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        ImageId: !Ref GoldenAmiId
        InstanceType: !Ref InstanceType
        IamInstanceProfile:
          Name: !Ref EC2InstanceProfile
        SecurityGroupIds: [ !Ref CelerySecurityGroup ]
        UserData: 
          Fn::Base64: |
            #!/bin/bash
            echo "APP_ROLE=celery" >> /etc/environment
            export APP_ROLE=celery

  CeleryASG:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: !Sub ${EnvironmentName}-CeleryASG
      VPCZoneIdentifier: !Ref PrivateAppSubnets
      LaunchTemplate:
        LaunchTemplateId: !Ref CeleryLaunchTemplate
        Version: !GetAtt CeleryLaunchTemplate.LatestVersionNumber
      MinSize: '1'
      MaxSize: '1'
      DesiredCapacity: '1'
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-Celery-Instance
          PropagateAtLaunch: true

# ---------------------------------------------------------
# CODE DEPLOY
# ---------------------------------------------------------

  CodeDeployApplication:
    Type: AWS::CodeDeploy::Application
    Properties:
      ApplicationName: !Sub ${EnvironmentName}-DjangoApp
      ComputePlatform: Server

  WebDeploymentGroup:
    Type: AWS::CodeDeploy::DeploymentGroup
    Properties:
      ApplicationName: !Ref CodeDeployApplication
      DeploymentGroupName: WebDeploymentGroup
      ServiceRoleArn: !GetAtt CodeDeployServiceRole.Arn
      AutoScalingGroups: [ !Ref WebASG ]
      DeploymentConfigName: CodeDeployDefault.OneAtATime

  CeleryDeploymentGroup:
    Type: AWS::CodeDeploy::DeploymentGroup
    Properties:
      ApplicationName: !Ref CodeDeployApplication
      DeploymentGroupName: CeleryDeploymentGroup
      ServiceRoleArn: !GetAtt CodeDeployServiceRole.Arn
      AutoScalingGroups: [ !Ref CeleryASG ]
      DeploymentConfigName: CodeDeployDefault.AllAtOnce
